@@ -1,5 +1,5 @@
-@swush 1.0
 
+@swush 1.0
 mysql_monk
 {
 	# Master master configuration:
@@ -63,6 +63,11 @@ mysql_monk
 		# max alloed lag in seconds for slave replication before raising an alert
 		# this is the default value, it's possible to override this per slave configuration.
 		max_allowed_lag : 10
+		
+		# Default database connection timeout in seconds and socket timeouts
+		# Those are the default value, it's possible to override this per server configuration.
+		connection_timeout_sec : 20
+		socket_timeout_sec : 20
 	}
 	
 	# Event handlers.
@@ -77,26 +82,25 @@ mysql_monk
 			class : net.firefang.mysqlmonk.email.EmailHandler
 			
 			# from address in sent emails
-			from : mysqlmonk@elvis.face.com
+			from : mysqlmonk@your_server.com
 			
 			# smtp host to send emails through, default is localhost
 			smtp_host : localhost
 			
 			#start SSL
-			use_ssl : true
+			use_ssl : false
 			
 			#Auth
-			auth_user : true
+			#auth_user : true
 			
 			#port 
-			port : 465
+			#port : 465
 			
 			#user name
-			user : username	
+			#user : username	
 			
 			#password
-			password : password	
-			
+			#password : password	
 			
 			# change to true to debug smtp sending
 			#smtd_debug : false
