@@ -1,5 +1,7 @@
 package net.firefang.mysqlmonk;
 
+import java.sql.Connection;
+
 import net.firefang.swush.Swush;
 
 /**
@@ -8,10 +10,10 @@ import net.firefang.swush.Swush;
  */
 public interface EventHandler
 {
-	public void lagStarted(ServerDef server, String message);
-	public void lagEnded(ServerDef server, String message);
-	public void error(ServerDef server, String message, Exception ex);
-	public void clearError(ServerDef server, String message);
+	public void lagStarted(ServerDef server, String message, Connection c) throws Exception;
+	public void lagEnded(ServerDef server, String message, Connection c) throws Exception;
+	public void error(ServerDef server, String message, Exception ex) throws Exception;
+	public void clearError(ServerDef server, String message) throws Exception;
 	public void init(Swush sw) throws Exception;
 	public void setMysqlMonk(MysqlMonk mySqlMonk);
 }
