@@ -2,6 +2,12 @@ package net.firefang.mysqlmonk.email;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.List;
 
 import net.firefang.mysqlmonk.EventHandler;
 import net.firefang.mysqlmonk.MysqlMonk;
@@ -65,17 +71,89 @@ public class EmailHandler implements EventHandler
 	}		
 	
 	@Override
-	public void lagEnded(ServerDef server, String message)
+	public void lagEnded(ServerDef server, String message, Connection c)
 	{
 		m_emailSender.send(m_from, m_recepients, "MySQLMonk -LAG: " + message, message);
 	}
 
 	@Override
-	public void lagStarted(ServerDef server, String message)
+	public void lagStarted(ServerDef server, String message, Connection c) throws SQLException
 	{
-		m_emailSender.send(m_from, m_recepients, "MySQLMonk +LAG: " + message, message);
+		String title = "MySQLMonk +LAG: " + message;
+		if (c != null)
+		{
+			List<MysqlProc> proclist = getProcList(c);
+			StringBuffer sb = new StringBuffer();
+			sb.append(message);
+			sb.append("\n");
+			sb.append("Mysql process list when lag started : \n");
+			sb.append("id\tuser\thost\tdb\tcommand\ttime\tstate\tinfo\n");
+			for(MysqlProc p : proclist)
+			{
+				sb.append(p.id).append("\t");
+				sb.append(p.user).append("\t");
+				sb.append(p.host).append("\t");
+				sb.append(p.db).append("\t");
+				sb.append(p.command).append("\t");
+				sb.append(p.state).append("\t");
+				sb.append(p.info);
+				sb.append("\n");
+			}
+			message = sb.toString();
+		}
+		m_emailSender.send(m_from, m_recepients, title, message);
 	}
 	
+	static class MysqlProc
+	{
+		int id;
+		String user;
+		String host;
+		String db;
+		String command;
+		int time;
+		String state;
+		String info;
+		
+		@Override
+		public String toString()
+		{
+			return id + " " + user + " " + host + " " + db + " " + command + " " + time + " " + state + " " + info; 
+		}
+	}
+	
+	private List<MysqlProc> getProcList(Connection c) throws SQLException
+	{
+		List<MysqlProc> res = new ArrayList<EmailHandler.MysqlProc>();
+		Statement st = c.createStatement();
+		ResultSet rs = null;
+		try
+		{
+			st.execute("SHOW PROCESSLIST");
+			rs = st.getResultSet();
+			while(rs.next())
+			{
+				MysqlProc p = new MysqlProc();
+				p.id = rs.getInt("id");
+				p.user = rs.getString("user");
+				p.host = rs.getString("host");
+				p.db = rs.getString("db");
+				p.command = rs.getString("command");
+				p.time = rs.getInt("time");
+				p.state = rs.getString("state");
+				p.info = rs.getString("info");
+				res.add(p);
+			}
+		}
+		finally
+		{
+			if (rs != null)
+				rs.close();
+			st.close();
+		}
+		return res;
+	}
+
 	private static String implode(Object set[], String sep)
 	{
 		StringBuffer b = new StringBuffer(set.length * 10);
